Api y pruebas